<resources>
    <string name="app_name">Recipe Guide</string>
    <string name="continue_button">Продолжить</string>
    <string name="input_name">Введите название</string>
    <string name="input_ingredients">Введите ингредиенты</string>
    <string name="input_recipe">Введите рецепт</string>
    <string name="input_time">Введите время</string>
    <string name="hint_ingredients">Ваши ингредиенты</string>
    <string name="hint_recipe">Ваш рецепт</string>
    <string name="addScreen_cooking_time">Время приготовления:</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="recipe">Рецепт</string>
    <string name="save_button">Сохранить</string>
    <string name="favourite">Избранное</string>
    <string name="options">Настройки</string>
    <string name="dark_themes">Темная тема</string>
    <string name="notifications">Уведомления</string>
    <string name="support">Поддержка</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="cooking_time">Время приготовления: %1$d мин</string>
    <string name="cooking_time_dishList">Время приготовления:\n%1$d мин</string>
    <string name="search">Поиск...</string>
    <string name="welcome">Welcome!</string>
    <string name="recommendation">Рекомендуем попробовать:</string>
    <string name="title_notification">Напоминание!</string>
    <string name="message_notification">Не забудьте попробовать новый рецепт сегодня!</string>
    <string name="notification_on">Уведомления включены</string>
    <string name="notification_off">Уведомления отключены</string>
    <string name="recipe_save_toast">Блюдо сохранено в "Избранное"</string>
    <string name="validation">Заполните все поля</string>
    <string name="confirmation">Подтверждение</string>
    <string name="support_message">Вы действительно хотите открыть ссылку поддержки?</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="subject">Запрос в поддержку</string>
    <string name="choose_language">"You have chosen: "</string>
    <string name="choose_lang">Выберите язык:</string>
    <string name="body">Ваше сообщение</string>
    <string name="policy_message">Вы действительно хотите скачать файл?</string>
    <string name="successful_saving_policy">Файл сохранен в Downloads: </string>
    <string name="unsuccessful_saving_policy">Ошибка при сохранении файла</string>
    <string name="no_email_client">Почтовый клиент не найден</string>
    <string name="prepared">Приготовил(а)</string>
    <string name="cooked_message">Блюдо сохранено в личном кабинете</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="my_acc">Мой аккаунт</string>
    <string name="language">Язык</string>
    <string name="or">Или</string>
    <string name="log_in">Авторизоваться</string>
    <string name="personal_acc">Личный кабинет</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="log_out">Выйти</string>
    <string name="input_email">Введите email</string>
    <string name="input_usermane">Введите имя пользователя</string>
    <string name="input_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="select_image">Выберите изображение</string>
    <string name="validation_no_image">Изображение не является блюдом</string>
    <string name="load_recipes">Загружено рецептов: </string>
    <string name="load_recipes_intent">Загружено рецептов из Intent: </string>
    <string name="no_dishes">Нет данных для загрузки, `dishes` остаётся `null`</string>
    <string name="error_loaded">Ошибка загрузки: </string>
    <string name="error_email_empty">Пожалуйста, введите ваш Email</string>
    <string name="error_email">Пожалуйста, введите корректный Email</string>
    <string name="error_username">Пожалуйста, введите имя пользователя</string>
    <string name="error_password_empty">Пожалуйста, введите пароль</string>
    <string name="error_password">Длина пароля должна содержать не менее 6 символов</string>
    <string name="error_confirmpassw_empty">Пожалуйста, подтвердите пароль</string>
    <string name="errror_confirmpassw">Пароли не совпадают</string>
    <string name="user">"Пользователь "</string>
    <string name="success_signin">" успешно зарегистрирован"</string>
    <string name="authentication_failed">Аутентификация провалена</string>
    <string name="enter_account">Войти</string>
    <string name="error_load_image">Ошибка загрузки изображения</string>
    <string name="error_translate">"Ошибка загрузки модели перевода: "</string>
    <string name="notification_permission">Разрешение на уведомления отклонено</string>
    <string name="error_pdf">Ошибка при создании PDF</string>
    <string name="category">Категория: </string>
    <string name="category_promt">Выбрать</string>
    <string name="category_appetizers">Закуски</string>
    <string name="category_soup">Суп</string>
    <string name="category_salad">Салат</string>
    <string name="category_main_course">Основное блюдо</string>
    <string name="category_side_dish">Гарнир</string>
    <string name="category_dessert">Десерт</string>
    <string name="category_drink">Напиток</string>
    <string name="category_sauces_and_seasonings">Соусы и приправы</string>
    <string name="category_baked_goods">Выпечка</string>
    <string name="category_snacks">Перекус</string>
    <string name="good_save">Рецепт сохранен в личном кабинете</string>
    <string name="add_ingredient">Добавить ингредиент</string>
    <string name="ingredient">Ингредиент</string>
    <string name="qty">кол-во</string>
    <string name="unit">Мера</string>
    <string name="cooked">Приготовленное</string>
    <string name="cold_start_hint">Для улучшения рекомендаций оцените несколько карточек</string>
    <string name="cold_start_hint2">Перетените карточку в сторону\nВправо - like, влево - dislike</string>
    <string name="cold_start_thanks_message">Спасибо за ваш выбор и уделенное время</string>
    <string name="cold_start_btn_complete">Готово</string>
    <string name="cold_start_later">Позже</string>
    <string name="question_type_dish">Какие типы блюд вы предпочитаете?</string>
    <string name="cb_italy">Итальянская</string>
    <string name="cb_japan">Японская</string>
    <string name="cb_china">Китайская</string>
    <string name="cb_russia">Русская</string>
    <string name="cb_thailand">Тайская</string>
    <string name="cb_france">Французская</string>
    <string name="cb_mexico">Мексиканская</string>
    <string name="cb_spain">Испанская</string>
    <string name="cb_turkey">Турецкая</string>
    <string name="cb_greece">Греческая</string>
    <string name="cb_other">Другое:</string>
    <string name="rb_other">Другая:</string>
    <string name="enter_other">Введите здесь</string>
    <string name="choose_like_kitchen">Выберите любимые кухни</string>
    <string name="no_diet">Не придерживаюсь определенного питания</string>
    <string name="paleo_diet">Палео-диета</string>
    <string name="dash_diet">Диета DASH</string>
    <string name="keto_diet">Кето-диета</string>
    <string name="gluten_free">Безглютеновая диета</string>
    <string name="low_carb">Низкоуглеводная диета</string>
    <string name="veganism">Веганство</string>
    <string name="vegetarianism">Вегетарианство</string>
    <string name="mediterranean">Средиземноморская диета</string>
    <string name="question_diet">Вы придерживаетесь определённого питания?</string>
    <string name="no_allergy">Нет пищевых аллергий или ограничений</string>
    <string name="wheat">Пшеница</string>
    <string name="soy">Соя</string>
    <string name="shellfish">Морепродукты</string>
    <string name="fish">Рыба</string>
    <string name="peanuts">Арахис</string>
    <string name="nuts">Орехи</string>
    <string name="eggs">Яйца</string>
    <string name="milk">Молоко</string>
    <string name="question_allergy">Какие продукты/аллергены вы хотите исключить из рекомендаций?</string>
    <string name="title_questionnaire">Помогите нам узнать вас лучше!</string>
    <string name="allergy_error">Пожалуйста, ответьте на вопрос</string>
    <string name="category_hint">(можно выбрать несколько вариантов)</string>
    <string name="category_error">Пожалуйста, выберите хотя бы одну категорию блюд</string>
    <string name="toast_FB_questionnaire">Для сохранения данных в облаке необходимо войти в аккаунт.</string>
    <string name="error_save_questionnaire">Ошибка сохранения</string>
    <string name="error_ET_allergy">Пожалуйста, укажите какой продукт хотите исключить</string>
    <string name="error_ET_cuisine">Пожалуйста, укажите вашу любимую кухню</string>
    <string name="synchronization_questionnaire">Синхронизация анкеты</string>
    <string name="synchronization_message">Хотите сохранить данные анкеты (аллергены, диета и т.д.) в ваш аккаунт?</string>
    <string name="beginner">Новичок</string>
    <string name="intermediate">Продвинутый</string>
    <string name="expert">Профессионал</string>
    <string name="skill_level">Выберите ваш уровень кулинарных навыков</string>
    <string name="error_hint_other_cuisine">Введите кухню</string>
    <string name="question_cuisine_add_screen">Выберите, к какой кухне относится ваше блюдо:</string>
    <string name="additional_info_add_screen">Дополнительная информация</string>
    <string name="title_hint_additional_info">(необязательно)</string>
    <string name="question_diet_add_screen">Укажите, соответствует ли блюдо диетическим требованиям:</string>
    <string name="info_dialog">Укажите дополнительную информацию — это поможет при рекомендации рецепта</string>
    <string name="filters">Фильтры</string>
    <string name="cuisine">Кухня:</string>
    <string name="diet">Диета:</string>
    <string name="max_time_filter">Макс. время (мин):</string>
    <string name="example_hint_max_time">Например: 60</string>
    <string name="reset_filters">Сбросить</string>
    <string name="apply_filters">Применить</string>
    <string name="toast_reset_filters">Фильтры сброшены</string>
    <string name="toast_applying_filters">Применяем фильтры...</string>
    <string name="toast_applying_ai">Исчем блюда...</string>
    <string name="toast_applied_filters">Фильтры применены</string>
    <string name="delete_dialog">Удаление рецепта</string>
    <string name="delete_message">Вы действительно хотите удалить рецепт</string>
    <string name="delete">Удалить</string>
    <string name="toast_recipe_deleted">Рецепт удалён</string>
    <string name="update">Обновить</string>
    <string name="ingredients_filter">Поиск по ингредиентам:</string>
    <string name="example_hint_ingredients_filter">Перечислите ингредиенты через запятую</string>
    <string name="voice_language">ru-RU</string>
    <string name="voice_promt">Назовите ингредиенты...</string>
    <string name="voice_promt_ai">Назовите критерии...</string>
    <string name="voice_promt_search">Назовите блюдо</string>
    <string name="toast_voice_not_supported">Голосовой ввод не поддерживается</string>
    <string name="toast_unable_recognize_ingredients">Не удалось распознать ингредиенты</string>
    <string name="toast_unable_recognize_criteria">Не удалось распознать критерии</string>
    <string name="toast_without_permission">Голосовой ввод недоступен без разрешения</string>
    <string name="ai">AI</string>
    <string name="input_criteria_ai">Введите критерии для поиска блюд:</string>
    <string name="additional_info_ai">(количество запросов ограничено)</string>
    <string name="example_ai_input">Например: итальянская кухня, вегатарианское, до 30 мин приготовления</string>
</resources>