<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="8dp"
    android:paddingBottom="0dp"
    android:paddingHorizontal="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ai"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        />


    <!-- Кухня (автодополнение + мультивыбор) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_criteria_ai"
        android:textStyle="bold"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/ai_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        style="@style/DarkerColor"
        android:text="@string/additional_info_ai"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/et_ai_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:completionThreshold="1"
        android:hint="@string/example_ai_input"
        android:padding="10dp"
        android:textSize="14sp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    <!-- Кнопки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="7dp"
            android:background="@drawable/rounded_button_empty"
            android:text="@string/reset_filters"
            />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent">

        </View>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="7dp"
            android:text="@string/apply_filters" />


    </LinearLayout>

</LinearLayout>